--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "kota"
   ],
   "author": "Edwin Ocky Prayogo",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
