--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "type":"module",
+  "type": "module",
   "name": "awilayah",
   "version": "1.0.0",
   "description": "REST API Wilayah Di Indonesia, Provinsi, Kabupaten/Kota, Kecamatan, Kelurahan (NodeJs ExpressJs)",
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.3"
   }
